Bug 348722 - Legend font colour not saved to .kst file
Summary: Legend font colour not saved to .kst file
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: datasources (other bugs)
Version First Reported In: 2.0.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-04 23:41 UTC by D. V. Wiebe
Modified: 2016-02-25 02:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description D. V. Wiebe 2015-06-04 23:41:20 UTC
The font colour used in legends isn't saved to the .kst session file.  On load, the default font colour is used for legend objects.

Reproducible: Always

Steps to Reproduce:
1. Create a plot object with a legend in it.
2. In the Legend tab of the Edit View Item box, change the font colour to something other than the kst theme default.
3. Save the session.
4. Load the session just saved.

Actual Results:  
The legend font colour reverts to the theme default font colour on load.

Expected Results:  
The chosen font colour is restored on load.
Comment 1 Netterfield 2016-02-25 02:09:44 UTC
Git commit 0d1eb256a5a1b96665031b51d3b773fad1649172 by Barth Netterfield.
Committed on 25/02/2016 at 02:08.
Pushed by netterfield into branch 'master'.

Load the legend font color from kst file.

M  +4    -0    src/libkstapp/legenditem.cpp

http://commits.kde.org/kst-plot/0d1eb256a5a1b96665031b51d3b773fad1649172