Load the legend font color from kst file.

BUG: 348722